email form update

--- a/navigation/css/styles.css
+++ b/navigation/css/styles.css
@@ -132,3 +132,10 @@
 .subscription__form :last-child {
   padding: 13px;
 }
+.subscription__form_text {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.25);
+  padding-left: 15px;
+}
