--- a/body/css/styles.css
+++ b/body/css/styles.css
@@ -1,4 +1,4 @@
-body {
+.body {
   background-image: url(../img/background-photo.png);
   background-repeat: no-repeat;
   max-width: 1440px;
@@ -76,6 +76,9 @@ body {
   line-height: 15px;
   text-transform: uppercase;
   margin: 0 auto;
+}
+.search__button a:hover {
+  opacity: 0.5;
 }
 .search__button input {
   position: absolute;
