--- a/colors_type/src/index.pug
+++ b/colors_type/src/index.pug
@@ -13,23 +13,23 @@ html(lang="en")
                 .colors__data
                     .colors__box#dark-shade-100
                     .colors__text Dark Shade 100%
-                        .colors__number #1F2D41
+                        .colors__number #1F2041
                 .colors__data
                     .colors__box#dark-shade-75
                     .colors__text Dark Shade 75%
-                        .colors__number #1F2D41
+                        .colors__number #1F2041
                 .colors__data
                     .colors__box#dark-shade-50
                     .colors__text Dark Shade 50%
-                        .colors__number #1F2D41
+                        .colors__number #1F2041
                 .colors__data
                     .colors__box#dark-shade-25
                     .colors__text Dark Shade 25%
-                        .colors__number #1F2D41
+                        .colors__number #1F2041
                 .colors__data
                     .colors__box#dark-shade-05
                     .colors__text Dark Shade 5%
-                        .colors__number #1F2D41
+                        .colors__number #1F2041
                 .colors__data
                     .colors__box#purple
                     .colors__text Purple
@@ -43,7 +43,9 @@ html(lang="en")
             .type
                 .type__data#h1
                     .type__name H1
-                    .type__example This one is the sub-section or widget title
+                    .type__example 
+                        |This one is the sub-section or <br> 
+                        |widget title
                 .type__data#h2
                     .type__name H2
                     .type__example Next one is the item title inside widgets
@@ -51,5 +53,7 @@ html(lang="en")
                     .type__name H3
                     .type__example This is a label or CTA text
                 .type__data#body
-                    .type__name body
-                    .type__example This is the body text which is used for most of the design, like paragraphs, lists, etc.
+                    .type__name Body
+                    .type__example 
+                        | This is the body text which is used for most <br>
+                        | of the design, like paragraphs, lists, etc.
