--- a/headers_footers/src/includes/headers/designer.scss
+++ b/headers_footers/src/includes/headers/designer.scss
@@ -8,7 +8,9 @@
         margin: 0 30px;
     }
     &__name {
+        @include body-text;
+        color: $dark-shade-50-color;
+        text-transform: capitalize;
         white-space: nowrap;
-        
     }
 }
