--- a/headers_footers/src/includes/headers/navigation.scss
+++ b/headers_footers/src/includes/headers/navigation.scss
@@ -1,15 +1,13 @@
-.main-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+.navigation { 
     &__list {
         display: flex;
         justify-content: space-between;
-        width: 530px;
-        text-align: right;
-        
+        width: 100%;
 
+        @include body-text;
+        color: $dark-shade-50-color;
+        text-transform: capitalize;
+        white-space: nowrap;
     }
     &__link {
         &_main {
