--- a/headers_footers/src/main.scss
+++ b/headers_footers/src/main.scss
@@ -1,7 +1,18 @@
+//nulling, common colors, etc
 @import '../../common/common-styles.scss';
-@import '../src/includes/headers/main-menu.scss';
+
+//primitives
+@import '../../common/buttons.scss';
+@import '../../common/inputs.scss';
+
+//headers styles
+@import '../src/includes/headers/navigation.scss';
 @import '../src/includes/headers/designer.scss';
-@import '../../common/mixins.scss';
+
+//footers styles
+@import '../src/includes/footers/widget.scss';
+@import '../src/includes/footers/copybar.scss';
+@import '../src/includes/footers/creative.scss';
 
 
 //fonts
@@ -21,11 +32,10 @@
 	font-style: normal;
 }
 
-.header {
+.bar {
 	max-width: 1440px;
+	width: 100%;
 	height: 70px;
-	@include body-text;
-    color: $dark-shade-50-color;
 	margin: auto;
 	background: #FFFFFF;
 	//нужно удалить марджин и сделать через флексы
@@ -33,29 +43,54 @@
 	box-shadow: 0px 10px 20px $dark-shade-05-color;	
 	
 	&__content	{
-		height: 100%;
 		max-width: 1160px;
+		height: 100%;
+		width: 100%;
+		
 		margin: auto;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 	}
-	&__buttons {
-		display: flex;
-		width: 250px;
-		justify-content: space-between;
-		margin-left: 30px;
-		&_transparent{
-			@include transparent-button;
-			&:hover{
-				@include transparent-button-hover;
-			}
-		}
-		&_purple {
-			@include purple-button;
-			&:hover{
-				@include purple-button-hover;
-			}
+}
+.main-menu {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	&__navigation{
+		width: 530px;
+	}
+}
+.buttons {
+	width: 250px;
+	margin-left: 30px;
+
+	display: flex;
+	justify-content: space-between;
+	&__transparent{
+		@include transparent-button;
+		&:hover{
+			@include transparent-button-hover;
 		}
 	}
+	&__purple {
+		@include purple-button;
+		&:hover{
+			@include purple-button-hover;
+		}
+	}
+}
+.widget {
+	max-width: 1440px;
+	height: 268px;
+	margin: auto;
+	//поменять через флексы
+	margin-top: 40px;
+	background: #FFFFFF;
+	box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+	&__content {    
+        max-width: 1160px;
+        margin: 7% auto;
+    }
 }
