copybar added to headers_footers

--- a/headers_footers/src/includes/footers/copybar.pug
+++ b/headers_footers/src/includes/footers/copybar.pug
@@ -1,1 +1,6 @@
-.copybar copybar
+.copybar
+    .copybar__text Copyright © 2018 Toxin UI Kit. All rights reserved.
+    .copybar__socials
+        img(src="img/twitter.png", alt="")
+        img(src="img/facebook.png", alt="")
+        img(src="img/inst.png", alt="")
