--- a/headers_footers/src/includes/footers/copybar.scss
+++ b/headers_footers/src/includes/footers/copybar.scss
@@ -1,3 +1,16 @@
 .copybar {
-    color: blue;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &__text {
+        @include body-text;
+        line-height: 17px;
+    }
+    &__socials{
+        max-width: 112px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
 }
