--- a/headers_footers/src/includes/footers/creative.pug
+++ b/headers_footers/src/includes/footers/creative.pug
@@ -1,1 +1,8 @@
-.creative creative
+.creative-footer
+    .creative-footer__logo
+        img(src="img/logo.svg", alt="")
+    .creative-footer__text Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+    .creative-footer__socials
+        img(src="img/twitter.png", alt="")
+        img(src="img/facebook.png", alt="")
+        img(src="img/inst.png", alt="")
