--- a/headers_footers/src/index.pug
+++ b/headers_footers/src/index.pug
@@ -6,33 +6,36 @@ html(lang="en")
         title Headers & footers
         script(src='./main.js')
     body
-        .bar
-            .bar__content
-                .main-menu
-                    .main-menu__logo
-                        img(src='img/logo.svg', alt='logo').logo
-                    .main-menu__navigation
-                        include includes/headers/navigation
-                .buttons
-                    .button
-                        a(href="#").buttons__transparent login
-                    .button
-                        a(href="#").buttons__purple register
-        .bar
-            .bar__content
-                .main-menu
-                    .main-menu__logo
-                            img(src='img/logo.svg', alt='logo').logo
-                    .main-menu__navigation
-                        include includes/headers/navigation
-                .designer
-                    include includes/headers/designer
-        .footer-standard
-            .widget
-                .widget__content
-                    include includes/footers/widget
+        .headers-footers
+            img(src="img/logo-bw.png", alt="").bw-logo
             .bar
                 .bar__content
-                    include includes/footers/copybar
-        .footer-creative
-            include includes/footers/creative
+                    .main-menu
+                        .main-menu__logo
+                            img(src='img/logo.svg', alt='logo').logo
+                        .main-menu__navigation
+                            include includes/headers/navigation
+                    .buttons
+                        .button
+                            a(href="#").buttons__transparent login
+                        .button
+                            a(href="#").buttons__purple register
+            .bar
+                .bar__content
+                    .main-menu
+                        .main-menu__logo
+                                img(src='img/logo.svg', alt='logo').logo
+                        .main-menu__navigation
+                            include includes/headers/navigation
+                    .designer
+                        include includes/headers/designer
+            .footer-standard
+                .widget
+                    .widget__content
+                        include includes/footers/widget
+                .bar
+                    .bar__content
+                        include includes/footers/copybar
+            .footer-creative
+                .footer-creative__content
+                    include includes/footers/creative
