--- a/common/inputs.scss
+++ b/common/inputs.scss
@@ -20,11 +20,87 @@
             &:focus::placeholder {
                 color: transparent;
         }
+            &:focus {
+                @include body-text;
+                margin-left: 10px;
+            }
         }
         &__arrow{
            background: url('img/arrow_subscription.png') 100% 50% no-repeat;
            width: 20px;
            cursor: pointer;
         }
+    }
+}
+
+@mixin default {
+    border: 1px solid $dark-shade-25-color;
+    background-color: #FFF;
+    border-radius: 4px;
+    max-width: 320px;
+    height: 44px;
+    .text-form {
+        padding: 14px;
+        width: 100%;
+        &__input {
+            width: 100%;
+            &::placeholder {
+                @include body-text;
+                color: $dark-shade-25-color;
+            }
+            &:focus {
+                @include body-text;
+            }
+            &:focus::placeholder {
+                color: transparent;
+        }
+        }
+    }    
+}
+
+// Only for UI kit, focus styles are already in default mixin
+@mixin focus-demonstration {
+    border: 1px solid $dark-shade-25-color;
+    background-color: #FFF;
+    border-radius: 4px;
+    max-width: 320px;
+    .text-form {
+        height: 44px;
+        padding: 14px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &__input {
+            width: 100%;
+            &::placeholder {
+                @include body-text;
+            }
+        }
+    }    
+}
+
+@mixin dropdown {
+    border: 1px solid $dark-shade-25-color;
+    background-color: #FFF;
+    border-radius: 4px;
+    height: 44px;
+    .dropdown-form {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        &__input {
+            width: 100%;
+            &::placeholder {
+                @include body-text;
+            }
+        }
+        &__arrow{
+            background: url('img/expand_more.png') 100% 50% no-repeat;
+            width: 20px;
+            cursor: pointer;
+         }
     }
 }
