--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -36,12 +36,11 @@ html(lang="ru")
                     button click me
                     div 
                         button перейти к оплате
-            .dropdown
-                div Спальни
+            .dropdown спальни
             .dropdownj
                 include includes/dropdown-guests-default
-            .dropdown
-                div Очистить
+            .dropdownj
+                include includes/dropdown-guests-example
         .test test
-        script(src='./js/dropdown-guests-default.js')
+        
                     
