--- a/common/dropdown-mixins.pug
+++ b/common/dropdown-mixins.pug
@@ -1,8 +1,8 @@
-mixin dropdown(name, id)
+mixin dropdown(name, value, id, newclass)
     .dropdown-row
         .label= name
         .counter
-            button(data-direction="minus").counter__btn.minus-btn -
-            input(type="text" value="0", id= id).counter__value
-            button(data-direction="plus").counter__btn +
+            button(data-direction="minus" class= newclass).counter__btn.minus-btn -
+            input(type="text" value= value, id= id).counter__value
+            button(data-direction="plus" class= newclass).counter__btn +
 
