--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -36,7 +36,8 @@ html(lang="ru")
                     button click me
                     div 
                         button перейти к оплате
-            .dropdown спальни
+            .dropdownj
+                include includes/dropdown-rooms-default
             .dropdownj
                 include includes/dropdown-guests-default
             .dropdownj
