--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -8,6 +8,7 @@
 //text-fields styles
 @import '../src/includes/text-fields.scss';
 @import '../src/includes/dropdown-guests-default.scss';
+@import '../src/includes/dropdown-rooms-default.scss';
 
 //fonts
 @font-face {
