--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -43,5 +43,6 @@ html(lang="ru")
             .dropdownj
                 include includes/dropdown-guests-example
         .test test
+        script(src="js/dropdown.js")
         
                     
