--- a/form_elements/src/includes/dropdown-guests-example.pug
+++ b/form_elements/src/includes/dropdown-guests-example.pug
@@ -4,12 +4,10 @@ include ../../../common/dropdown-mixins
         +input-dropdown("3 гостя")
     .guests__dropdown
         .guests__rows
-            +dropdown("Взрослые", 2, "exampleAdults", "example-counter__btn")
-            +dropdown("Дети", 1, "exampleChildren", "example-counter__btn")
-            +dropdown("Младенцы", 0, "exampleInfants", "example-counter__btn")
+            +dropdown("Взрослые", 2)
+            +dropdown("Дети", 1)
+            +dropdown("Младенцы", 0)
         .guests__buttons
             .guests__clear.button-appearance Очистить
             .guests__submit Применить
-
-script(src='./js/dropdown-guests-example.js')
     
