--- a/form_elements/src/includes/text-fields.pug
+++ b/form_elements/src/includes/text-fields.pug
@@ -1,4 +1,5 @@
 include ../../../common/inputs-mixins
+include ../../../common/dropdown-mixins
 
 .inputs
     .inputs__regular
@@ -22,6 +23,15 @@ include ../../../common/inputs-mixins
                 .text-field__description-add default
             .text-field__dropdown-default
                 +input-dropdown("Сколько гостей")
+            .text-field__common-dropdown.common-dropdown.hidden
+                .common-dropdown__rows
+                    +dropdown("Взрослые", 0, "adults", "guests-counter__btn")
+                    +dropdown("Дети", 0, "children", "guests-counter__btn")
+                    +dropdown("Младенцы", 0, "infants", "guests-counter__btn")
+                .common-dropdown__buttons
+                    .common-dropdown__clear.button-hidden Очистить
+                    .common-dropdown__submit Применить
+            script(src="./js/dropdown-guests-default.js")
 
         .text-field
             .text-field__description
