--- a/form_elements/src/includes/text-fields.scss
+++ b/form_elements/src/includes/text-fields.scss
@@ -1,15 +1,17 @@
 
 .inputs {
-
+    height: 636px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     &__regular {
-        height: 322px;
+        height: 50%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-bottom: 40px;
     }
     &__small {
-        height: 274px;
+        height: 43%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -18,6 +20,10 @@
 }
 
 .text-field {
+    position: relative;
+    &__common-dropdown {
+        width: 100%;
+    }
     &__description {
         display: flex;
         justify-content: space-between;
@@ -31,10 +37,11 @@
     }
     &__default {
         @include default;
+        width: 320px;
     }
     &__focus {
         @include focus-demonstration;
-        
+    
     }
     &__dropdown-default {
         @include dropdown;
