common class 'description' was added

--- a/form_elements/src/includes/dropdown-guests-default.pug
+++ b/form_elements/src/includes/dropdown-guests-default.pug
@@ -1,7 +1,6 @@
 include ../../../common/dropdown-mixins
 .guests
-    .text-field__description
-        .text-field__description-main dropdown
+    .guests-description.description dropdown
     .guests__field
         +input-dropdown("Сколько гостей")
     .guests__dropdown
