--- a/form_elements/src/includes/dropdown-guests-example.pug
+++ b/form_elements/src/includes/dropdown-guests-example.pug
@@ -1,5 +1,6 @@
 include ../../../common/dropdown-mixins
 .guests
+    .guests-description.description dropdown
     .guests__field
         +input-dropdown("3 гостя")
     .guests__dropdown
