--- a/form_elements/src/includes/text-fields.pug
+++ b/form_elements/src/includes/text-fields.pug
@@ -5,22 +5,22 @@ include ../../../common/dropdown-mixins
     .inputs__regular
         .text-field
             .text-field__description
-                .text-field__description-main text field
-                .text-field__description-add default
+                .text-field__description.description text field
+                .text-field__description_add default
             .text-field__default
                 +input-text("Email", "some name")
 
         .text-field
             .text-field__description
-                .text-field__description-main text field
-                .text-field__description-add hover / focus
+                .text-field__description.description text field
+                .text-field__description_add hover / focus
             .text-field__focus
                 +input-text("This is pretty awesome")
 
         .text-field
             .text-field__description
-                .text-field__description-main dropdown
-                .text-field__description-add default
+                .text-field__description.description dropdown
+                .text-field__description_add default
             .text-field__dropdown-default
                 +input-dropdown("Сколько гостей")
             .text-field__common-dropdown.common-dropdown.hidden
@@ -35,8 +35,8 @@ include ../../../common/dropdown-mixins
 
         .text-field
             .text-field__description
-                .text-field__description_main masked text field
-                .text-field__description-add default
+                .text-field__description.description masked text field
+                .text-field__description_add default
             .text-field__default
                 +input-text("ДД.ММ.ГГГГ")
 
@@ -44,20 +44,20 @@ include ../../../common/dropdown-mixins
         .text-field__date-dropdown
             .text-field__date-dropdown_single
                 .text-field__description
-                    .text-field__description-main date dropdown
+                    .text-field__description.description date dropdown
                 .text-field__dropdown-default
                     +input-dropdown("ДД.ММ.ГГГГ")
             .text-field__date-dropdown_single
                 .text-field__description
-                    .text-field__description-main date dropdown
+                    .text-field__description.description date dropdown
                 .text-field__dropdown-default
                     +input-dropdown("19.08.2019")
 
         .text-field
-            .text-field__description filter date dropdown
+            .text-field__description.description filter date dropdown
             .text-field__filter
                 +input-dropdown("19 авг - 23 авг")
         .text-field    
-            .text-field__description subscription text field
+            .text-field__description.description subscription text field
             .text-field__email
                 +input-email("Email")
