--- a/form_elements/src/includes/text-fields.scss
+++ b/form_elements/src/includes/text-fields.scss
@@ -27,10 +27,8 @@
     &__description {
         display: flex;
         justify-content: space-between;
-        max-width: 320px;
-        margin-bottom: 5px;
-        @include h3-text;
-        &-add {
+        &_add {
+            @include h3-text;
             color: $dark-shade-50-color;
             font-weight: normal;
         }
