--- a/form_elements/src/includes/text-fields.scss
+++ b/form_elements/src/includes/text-fields.scss
@@ -27,6 +27,7 @@
     &__description {
         display: flex;
         justify-content: space-between;
+        max-width: 320px;
         &_add {
             @include h3-text;
             color: $dark-shade-50-color;
