--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -1,5 +1,6 @@
 //nulling, common colors, etc
 @import '../../common/common-styles.scss';
+@import '../../common/buttons.scss';
 
 //primitives
 @import '../../common/inputs.scss';
