--- a/form_elements/src/includes/small-buttons.pug
+++ b/form_elements/src/includes/small-buttons.pug
@@ -20,16 +20,17 @@
             .button-option__input
                 input(type="radio", name='sex', id='female').button-option__radio
                 label(for="female") Женщина
-    .small-buttins__toggle.button-option
+    .small-buttons__toggle.button-option
         .button-option__description.description toggle
         .button-option__example
-            .button-option__input.container
-                input(type="checkbox", id="toggle-button").button-option__toggle.toggle-button
-                label(for="toggle-button") Получать спецпредложения
-
-    .button-option
-        .button-option__description.description toggle
+            .button-option__input
+                input(type="checkbox", id="toggle-checked", checked).button-option__toggle
+                label(for="toggle-checked") Получать спецпредложения
+            .button-option__input
+                input(type="checkbox", id="toggle").button-option__toggle
+                label(for="toggle") Получать спецпредложения
     .button-option
         .button-option__description.description like button
+        .button-option__example
     .button-option
         .button-option__description.description rate button
