--- a/form_elements/src/includes/small-buttons.scss
+++ b/form_elements/src/includes/small-buttons.scss
@@ -21,6 +21,10 @@
         height: 35px;
         align-self: flex-start;
     }
+    &__input {
+        display: flex;
+        align-items: center;
+    }
     &__example {
         display: flex;
         flex-direction: column;
@@ -33,109 +37,14 @@
         }
     }
     &__checkbox {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-    &+label {
-        display: inline-flex;
-        line-height: 18px;    
-    }
-    &+label::before {
-        content: "";
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        border: 1px solid $dark-shade-25-color;
-        border-radius: 4px;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: 50% 50%;
-        flex-shrink: 0;
-        flex-grow: 0;
-        margin-right: 10px;
-        
-    }
-    &:checked+label::before {
-        border-color: $purple-color;
-        background-image: url(../src/img/arrow-check.svg);
-    }
+        @include radio-check;
+        @include check;
     }
     &__radio {
-        position: absolute;
-        z-index: -1;
-        opacity: 0;
-        &+label {
-            display: inline-flex;
-            align-items: center;
-        }
-        &+label::before {
-            content: "";
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 1px solid $dark-shade-25-color;
-            border-radius: 50%;
-            background-repeat: no-repeat;
-            background-position: center center;
-            margin-right: 10px;
-            flex-shrink: 0;
-            flex-grow: 0;
-            white-space: nowrap;
-        }
-        &:checked+label {
-            display: flex;
-            position: relative;
-        }
-        &:checked+label::before {   
-            border-color: $purple-color;
-        }
-        &:checked+label::after {
-            content: "";
-            position: absolute;
-            left: 4px;
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-        }
+        @include radio-check;
+        @include radio;
     }
-
-
-}
-
-
-.toggle-button {
-    position: relative;
-    width: 40px;
-    height: 20px;
-    vertical-align: top;
-    background: #ffffff;
-    border: 1px solid #bbc1e1;
-    border-radius: 30px;
-    outline: none;
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    transition: 0.3s;
-    &::after {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        left: 3px;
-        top: 1.5px;
-        width: 13px;
-        height: 13px;
-        background-color: blue;
-        border-radius: 50%;
-        transform: translateX(0);
-        transition: 0.3s;
-    }
-    &:checked::after {
-        transform: translateX(calc(100% + 5px));
-        background-color: #fff;  
-    }
-    &:checked {
-        background-color: blue;
-    }
+    &__toggle {
+        @include toggle;
+    }   
 }
