--- a/form_elements/src/includes/dropdown-guests-default.pug
+++ b/form_elements/src/includes/dropdown-guests-default.pug
@@ -1,6 +1,6 @@
 include ../../../common/dropdown-mixins
 .guests
-    .guests-description.description dropdown
+    .guests__description dropdown
     .guests__field
         +input-dropdown("Сколько гостей")
     .guests__dropdown
